--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,26 @@
 spring:
+  config:
+    import: optional:classpath:.env[.properties]
   application:
     name: user-service
+  datasource:
+    url: jdbc:mysql://localhost:3306/user_service?useTimezone=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+    username: ${ENV_ROOT_USER:root}
+    password: ${ENV_ROOT_PASSWORD:devdojo}
+  jpa:
+    show-sql: true
   threads:
     virtual:
       enabled: true
+
+logging:
+  level:
+    academy.devdojo: debug
 server:
   port: 8090
   servlet:
     context-path: /
+
   error:
     include-stacktrace: on_param
   tomcat:
