feat: create user repository

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
     password: ${ENV_ROOT_PASSWORD:devdojo}
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: update
   threads:
     virtual:
       enabled: true
