--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<org.mapstruct.version>1.6.3</org.mapstruct.version>
 		<datasource-proxy-spring-boot-starter.version>1.9.2</datasource-proxy-spring-boot-starter.version>
 		<json-unit-assertj.version>3.4.1</json-unit-assertj.version>
+		<rest-assured.version>5.5.0</rest-assured.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -83,6 +84,12 @@
 			<groupId>net.javacrumbs.json-unit</groupId>
 			<artifactId>json-unit-assertj</artifactId>
 			<version>${json-unit-assertj.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>${rest-assured.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
