test: create post integration test when user is not found

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,8 @@ server:
 
   error:
     include-stacktrace: on_param
+    include-binding-errors: always
+    include-message: always
   tomcat:
     threads:
       max: 20
