--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -10,3 +10,7 @@ spring:
     properties:
       hibernate:
         globally_quoted_identifiers: true
+server:
+  error:
+    include-message: always
+    include-binding-errors: always
