--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,4 +39,6 @@ management:
     web:
       exposure:
         include: "*"
-
+brasil-api:
+  base-url: ${BRASIL_API_BASE_URL:https://brasilapi.com.br/api}
+  cep-uri: ${BRASIL_API_URI:/cep/v1/{cep}}
