test: add integration test for BrasilApiController using WireMock

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -14,6 +14,7 @@ server:
   error:
     include-message: always
     include-binding-errors: always
+
 brasil-api:
-  base-url: https://localhost:8085/api
+  base-url: http://localhost:${wiremock.server.port}/api
   cep-uri: /cep/v1/{cep}
