chore: add step to print secret in deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,3 +15,6 @@ jobs:
       - name: Print Branch
         run: echo "Deploying branch ${{ github.event.inputs.branch }}"
 
+      - name: Print secret
+        run: echo "Secret is ${{ secrets.TOKEN_TEST }}"
+
